--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\DataBaseConnections\DataBaseConnections.csproj" />
     <ProjectReference Include="..\DtoMappings\DtoMappings.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
 
