--- a/DigiBank/DigiBank.csproj
+++ b/DigiBank/DigiBank.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
     <ProjectReference Include="..\DataBaseConnections\DataBaseConnections.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
 
 </Project>
